--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  height: auto;
 }
 
 .App-logo {
@@ -35,4 +36,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+.stack-div {
+  min-height: 750px;
+}
+.stack-div > div {
+  display: block;
+}
+
+body,
+html {
+  height: 40vmin;
 }
